[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/ninja.gd" type="Script" id=1]
[ext_resource path="res://Assets/smoke0.png" type="Texture" id=3]
[ext_resource path="res://Assets/smoke1.png" type="Texture" id=4]
[ext_resource path="res://Assets/smoke2.png" type="Texture" id=5]
[ext_resource path="res://Assets/smoke3.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "smoke_appear"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("smoke:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "smoke_disappear"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("smoke:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 12 )

[node name="ninja" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false

[node name="smoke" type="Sprite" parent="."]
position = Vector2( 0, 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/smoke_appear = SubResource( 1 )
anims/smoke_disappear = SubResource( 2 )

[node name="move_timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
